--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<h1>Odin Recipes</h1>
     <ul>
         <li><a href='./recipes/moussaka.html'>Noussaka</a></li>
+        <li><a href="./recipes/chili.html">Chili</a></li>
 
     </ul>
 </body>
